github/API_V3/slurm-191567.out
  File "commit_mine.py", line 95
    projects = np.array_split(project_list.index.tolist(), 50s)
                                                             ^
SyntaxError: invalid syntax
